Added remaining incubator config.